Sequential Gradle Tasks, Enhanced Logging, and PMD Fixes.
- Modified JagrathaService to execute Gradle tasks independently and sequentially.
- Implemented fail-fast logic for quality checks.
- Updated log storage to use session-specific subfolders.
- Changed modified file log format to JSONL.
- Added API endpoints and MCP tools for log retrieval.
- Fixed Path Traversal vulnerability in log retrieval.
- Added ObjectMapper configuration with @ConditionalOnMissingBean.
- Fixed various PMD violations (Complexity, Coupling, Logging, Constructors).
- Updated tests and verified all pass.

Co-authored-by: arun-infenia <154401555+arun-infenia@users.noreply.github.com>